fast_forward_macros/tests/ui/fail_invalid_field.stderr
error[E0609]: no field `id` on type `&Car`
 --> tests/ui/fail_invalid_field.rs:8:53
  |
8 |         id: fast_forward::index::uint::UIntIndex => id,
  |                                                     ^^ unknown field
  |
  = note: available fields are: `0`, `1`
